// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header on mobile renders correctly on mobile 1`] = `
<Base>
  <AddonBeam
    addonIcon="SecurityShield"
    addonName="Ship"
    appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
    appLink="https://app.bitrise.io/app/test-app-slug-1"
    appName="This is an awesome app"
    backgroundColor="grape-4"
    color="white"
    isHamburgerIconActive={false}
    isInResponsiveView={true}
    onHamburgerIconClick={[Function]}
  >
    <Link
      as="/apps/test-app-slug-1/settings"
      href="/settings?appSlug=test-app-slug-1"
    >
      <a>
        <AddonBeamLink
          Component="div"
          icon="Settings"
        >
          Settings
        </AddonBeamLink>
      </a>
    </Link>
  </AddonBeam>
  <Flex
    className="header"
    direction="vertical"
    gap="x2"
    paddingVertical="x8"
  >
    <_default
      projectType="other"
      smaller={false}
      title="This is an awesome app"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              This is an awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header renders correctly 1`] = `
<Base>
  <AddonBeam
    addonIcon="SecurityShield"
    addonName="Ship"
    appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
    appLink="https://app.bitrise.io/app/test-app-slug-1"
    appName="This is an awesome app"
    backgroundColor="grape-4"
    color="white"
    isHamburgerIconActive={false}
    isInResponsiveView={false}
    onHamburgerIconClick={[Function]}
  >
    <Link
      as="/apps/test-app-slug-1/settings"
      href="/settings?appSlug=test-app-slug-1"
    >
      <a>
        <AddonBeamLink
          Component="div"
          icon="Settings"
        >
          Settings
        </AddonBeamLink>
      </a>
    </Link>
  </AddonBeam>
  <Flex
    className="header"
    direction="vertical"
    gap="x2"
    paddingVertical="x8"
  >
    <_default
      projectType="other"
      smaller={false}
      title="This is an awesome app"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              This is an awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header routes /app 1`] = `
<Base>
  <AddonBeam
    addonIcon="SecurityShield"
    addonName="Ship"
    appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
    appLink="https://app.bitrise.io/app/test-app-slug-1"
    appName="This is an awesome app"
    backgroundColor="grape-4"
    color="white"
    isHamburgerIconActive={false}
    isInResponsiveView={false}
    onHamburgerIconClick={[Function]}
  >
    <Link
      as="/apps/test-app-slug-1/settings"
      href="/settings?appSlug=test-app-slug-1"
    >
      <a>
        <AddonBeamLink
          Component="div"
          icon="Settings"
        >
          Settings
        </AddonBeamLink>
      </a>
    </Link>
  </AddonBeam>
  <Flex
    className="header"
    direction="vertical"
    gap="x2"
    paddingVertical="x8"
  >
    <_default
      projectType="other"
      smaller={false}
      title="This is an awesome app"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              This is an awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header routes /settings 1`] = `
<Base>
  <AddonBeam
    addonIcon="SecurityShield"
    addonName="Ship"
    appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
    appLink="https://app.bitrise.io/app/test-app-slug-1"
    appName="This is an awesome app"
    backgroundColor="grape-4"
    color="white"
    isHamburgerIconActive={false}
    isInResponsiveView={false}
    onHamburgerIconClick={[Function]}
  >
    <Link
      as="/apps/test-app-slug-1/settings"
      href="/settings?appSlug=test-app-slug-1"
    >
      <a>
        <AddonBeamLink
          Component="div"
          icon="Settings"
        >
          Settings
        </AddonBeamLink>
      </a>
    </Link>
  </AddonBeam>
  <Flex
    className="header"
    direction="vertical"
    gap="x2"
    paddingVertical="x5"
  >
    <Flex
      direction="horizontal"
    >
      <Link
        as="/apps/test-app-slug-1"
        href="/app?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            className="breadcrumbs"
            size="x4"
          >
            « 
            This is an awesome app
          </Text>
        </a>
      </Link>
    </Flex>
    <_default
      projectType="settings"
      smaller={true}
      title="Settings"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              This is an awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;

exports[`Header routes /version 1`] = `
<Base>
  <AddonBeam
    addonIcon="SecurityShield"
    addonName="Ship"
    appImage="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
    appLink="https://app.bitrise.io/app/test-app-slug-1"
    appName="This is an awesome app"
    backgroundColor="grape-4"
    color="white"
    isHamburgerIconActive={false}
    isInResponsiveView={false}
    onHamburgerIconClick={[Function]}
  >
    <Link
      as="/apps/test-app-slug-1/settings"
      href="/settings?appSlug=test-app-slug-1"
    >
      <a>
        <AddonBeamLink
          Component="div"
          icon="Settings"
        >
          Settings
        </AddonBeamLink>
      </a>
    </Link>
  </AddonBeam>
  <Flex
    className="header"
    direction="vertical"
    gap="x2"
    paddingVertical="x5"
  >
    <Flex
      direction="horizontal"
    >
      <Link
        as="/apps/test-app-slug-1"
        href="/app?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            className="breadcrumbs"
            size="x4"
          >
            « 
            This is an awesome app
          </Text>
        </a>
      </Link>
    </Flex>
    <_default
      projectType="other"
      smaller={true}
      title="This is an awesome app v1.0.3 (32)"
    />
  </Flex>
  <Flex
    alignChildrenVertical="end"
    backgroundColor="grape-5"
    className="mobileMenu"
    color="white"
    direction="vertical"
  >
    <Flex
      padding="x4"
    >
      <a
        href="https://app.bitrise.io/app/test-app-slug-1"
        target="_blank"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x2"
        >
          <Image
            borderRadius="x1"
            height="1.5rem"
            src="https://concrete-userfiles-production.s3.us-west-2.amazonaws.com/repositories/0dbc45647ce84cb9/avatar/avatar.png"
            width="1.5rem"
          />
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x1"
          >
            <Text
              size="x3"
            >
              This is an awesome app
            </Text>
            <Icon
              name="OpenInBrowser"
              size="1.5rem"
            />
          </Flex>
        </Flex>
      </a>
    </Flex>
    <Divider
      color="grape-4"
      direction="horizontal"
      width="0.125rem"
    />
    <Flex
      padding="x4"
    >
      <Link
        as="/apps/test-app-slug-1/settings"
        href="/settings?appSlug=test-app-slug-1"
      >
        <a>
          <Text
            color="gray-1"
            size="x3"
          >
            Settings
          </Text>
        </a>
      </Link>
    </Flex>
  </Flex>
</Base>
`;
